--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,30 @@
             <artifactId>xstream</artifactId>
             <version>1.4.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>pl.dbjllmjk.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
